--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,25 +2,26 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # щоденне оновлення о півночі UTC
+    - cron: "0 0 * * *" # Щодня о 00:00 UTC
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake SVG
+      - name: Generate GitHub Contribution Snake
         uses: Platane/snk@v3
         with:
           github_user_name: Viacheslav-Bobivnyk
           outputs: |
-            ./github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.svg
 
-      - name: Commit and push
-        uses: EndBug/add-and-commit@v9
+      - name: Push to `output` branch
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          message: "generate snake animation"
-          add: "github-contribution-grid-snake.svg"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: output
+          publish_dir: dist
